--- a/index.html
+++ b/index.html
@@ -30,11 +30,67 @@
 
                     <li><a class="inactive" href="">Contact</a></li>
                 </ul>
-            
+
             </nav>
             <a href=""><i class="fa-solid fa-bag-shopping"></i></a>
 
         </header>
+        <!-- section1 -->
+        <section class="section_1">
+            <img class="section1_img" src="images/pumpkine.webp" alt="">
+
+
+            <div class="section1_div">
+                <h2 class="section1_h2">Taste the world’s best dishes</h2>
+
+                <button class="section1_button">ONLINE ORDER</button>
+
+
+            </div>
+
+        </section>
+        <!-- section2 -->
+        <section class="section_2">
+
+            <img src="images/card1 (1).png" alt="">
+
+            <div class="section2_div">
+
+                <h2 class="section_h2">Discover Our Story</h2>
+
+                <p class="section_p">Our story starts with you. Right here. At our table. Welcome to True Food Kitchen.
+                    True Food Kitchen is the only restaurant fundamentally based on science which ensures all of its
+                    craveable dishes and drinks work to increase the longevity of our people and planet.</p>
+
+
+                <a class="section2_a" href="index.html"> <button class="section2_button"><span>LEARN
+                            MORE</span></button></a>
+
+            </div>
+
+        </section>
+
+        <footer>
+            <div class="footer_div1">
+
+                <h2 class="footer_h2">FOOD</h2>
+                <a class="footer_a1" href="">Menu</a>
+                <a class="footer_a1 middle_line" href="">Catering Nutritionals and Allergens</a>
+                <a class="footer_a1" href="">Good Slice Pizza</a>
+
+            </div>
+
+            <div class=" footer_div2">
+
+                <h2 class="footer_h2">Connect With Us </h2>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-tiktok"></i></a>
+
+            </div>
+
+        </footer>
 
 
 
